# ckanext-isebel

./: .gitignore  MANIFEST.in  README.md  managed-schema  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/isebel/: controller.old.py  controller.py  plugin.py  views.py
ckanext/isebel/assets/: huc-util-is.css  script.js  utilGA1.js  webassets.yml
ckanext/isebel/templates/: base.html  footer.html  header.html  page.html
ckanext/isebel/templates/home/: about.html  layout1.html  layout2.html  layout4.html
ckanext/isebel/templates/home/snippets/: featured_organization.html  promoted.html
ckanext/isebel/templates/organization/: read_base.html
ckanext/isebel/templates/organization/snippets/: organization_item.html
ckanext/isebel/templates/package/: read.html  read_base.html  search.html
ckanext/isebel/templates/package/snippets/: additional_info.html  creation_time.html
ckanext/isebel/templates/snippets/: facet_list.html  home_breadcrumb_item.html  organization_item.html  package_item.html  package_list.html  search_form.html  search_result_text.html
ckanext/isebel/tests/: test_plugin.py
