[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-isebel"
version = "0.0.1"
description = "CKAN extension for project ISEBEL"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Vic Ding", email = "qiqing.ding@di.huc.knaw.nl" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
keywords = ["CKAN", "ISEBEL", "facets"]
dependencies = [
    # Add your dependencies here
]
