[metadata]
name = ckanext-isebel
version = 0.0.1
description = CKAN extension for project ISEBEL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/knaw-huc/ckanext-isebel
author = Vic Ding
author_email = qiqing.ding@di.huc.knaw.nl
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN CKAN, ISEBEL, facets

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             isebel = ckanext.isebel.plugin:IsebelPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/isebel/i18n/ckanext-isebel.pot
width = 80

[init_catalog]
domain = ckanext-isebel
input_file = ckanext/isebel/i18n/ckanext-isebel.pot
output_dir = ckanext/isebel/i18n

[update_catalog]
domain = ckanext-isebel
input_file = ckanext/isebel/i18n/ckanext-isebel.pot
output_dir = ckanext/isebel/i18n
previous = true

[compile_catalog]
domain = ckanext-isebel
directory = ckanext/isebel/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
